--- a/app/views/members/leaderboard.html.erb
+++ b/app/views/members/leaderboard.html.erb
@@ -9,7 +9,7 @@
             <div class="title"><h1>LEADERBOARD</h1></div>
         </div>
 
-        <div class="row-fluid">
+        <div class="row-fluid leaderboard">
 
             <div class="span4">
                 <h2>THIS MONTH</h2>
