fix for submit from icon for global search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -159,7 +159,7 @@
       <div id="globalSearch">
         <form id="globalSearchForm" class="form-search jqTransform pull-right" action="/search">
           <input type="text" class="search-query" name="keyword" placeholder="Search Members or Challenges"/>
-          <a href="#" class="btn-search" onclick="document.getElementById('submission_details').submit();"></a>
+          <a href="#" class="btn-search" onclick="document.getElementById('globalSearchForm').submit();"></a>
         </form>
       </div>
       <% end %>
