replace login with view challenges

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -9,7 +9,7 @@
 
           <div class="buttons">
             <p><strong><%= number_with_delimiter(@platform_stats['members'], :delimiter => ',') %></strong> of the world's best minds competing</p>
-            <a class="get-started" href="#register-modal" data-toggle="modal"><span><span>Join The Team</span></span></a>
+            <a class="get-started" href="/challenges"><span><span>View Challenges</span></span></a>
             <a class="learn-more" href="/how-it-works">Or Learn More</a>
           </div>
         </div>
