--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,7 @@
         $.pnotify.defaults.delay = 4000;
 
         <% flash.each do |key, msg| %>
-        <% puts "==== flash -- key: #{key}, msg: #{msg}" %>
-        <% unless key == 'timedout' %>
+        <% unless msg == true || msg == 'true' %>
         $.pnotify({ width: "400px", text: "<%= msg %>", type: "<%= key %>" });
         <% end %>
         <% end %>      
