fixed docusign case

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -208,7 +208,7 @@
                   <ul class="links">
                       <li><a href="http://mesh01.cloudspokes.com" target="_blank">MESH01</a></li>
                       <li><a href="http://smartsheet.cloudspokes.com" target="_blank">Smartsheet</a></li>
-                      <li><a href="http://docusign.cloudspokes.com" target="_blank">Docusign</a></li>
+                      <li><a href="http://docusign.cloudspokes.com" target="_blank">DocuSign</a></li>
                       <li><a href="http://financialforce.cloudspokes.com" target="_blank">FinancialForce</a></li>
                   </ul>
               </div>
