--- a/app/views/content/corona.html.erb
+++ b/app/views/content/corona.html.erb
@@ -4,8 +4,7 @@
 
 <div class="title"><h1>MEMBER ACTIVITY</h1></div>
 
-<iframe src="http://coronabaer.herokuapp.com/UI-02/map-visualization.html" 
-  width="100%" height="600" frameborder="0"></iframe>
+<iframe src="http://coronabaer.herokuapp.com" width="100%" height="700" frameborder="0"></iframe>
 
 </div>
 
