--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -8,6 +8,10 @@
         <%= render partial: "shared/happening_now" %> 
         <br/>
 
+        <div class="title"><h1>REAL-TIME PLATFORM ACTIVITY</h1></div>
+        <iframe src="http://corona.cloudspokes.com" width="100%" height="700" frameborder="0"></iframe>
+        <center><%= link_to "View Full Screen", "http://corona.cloudspokes.com", :target => "_blank" %></center>        
+
         <div class="row-fluid">
             <div class="span6">
                 <div class="title"><h1>FEATURED CHALLENGE</h1></div>
