--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,6 +121,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <%= raw @cms_headline %>
           <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
           <div class="nav-collapse collapse">
             <ul class="nav">
