changes to display tc challenges in list of open challenges

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -860,8 +860,12 @@ h2.message {
   vertical-align: middle;
 }
 
-.task {
+.first2finish {
   background-position: 0 0;
+}
+
+.topcoder {
+  background-position: -372px 0;
 }
 
 .sweep-stakes {
