--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -215,7 +215,7 @@
             <div class="span6">
                 <div class="challenge well well-large">
                     <h3>
-                      <%= link_to format_long_challenge_name(c.name), c.tc_challenge? ? "http://community.topcoder.com/tc?module=ProjectDetail&pj=#{c.challenge_id}" : challenge_path(c), :target => c.tc_challenge? ? '_blank' : '' %>
+                      <%= link_to format_long_challenge_name(c.name), c.tc_challenge? ? tc_challenge_link(c) : challenge_path(c), :target => c.tc_challenge? ? '_blank' : '' %>
                     </h3>
 
                     <% if %(first2finish).include?(c.challenge_type.downcase) %>
