added admin ui for adding apis

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,7 +9,15 @@
 		  <form action='/admin/blog_fodder'>
 		  Challenge ID: <input type="text" name="challenge_id"> <div class="btn"><input type="submit" class="btn" value="Submit"></div>
 		  </form>
+
+		  <h1><br/>Record API Wheel Spin</h1>
+		  <form action='/admin/api_spin' method="post">
+		  <p>Member: <input type="text" name="membername"></p> 
+		  <p>APIs: <input type="text" name="apis" style="width:350px"></p> 
+		  <div class="btn"><input type="submit" class="btn" value="Submit"></div>
+		  </form>
 		 </div>
+
 
 		 <div class="span6">
 		  <h1>RSS Entries</h1>
