--- a/app/views/mashathon/index.html.erb
+++ b/app/views/mashathon/index.html.erb
@@ -48,7 +48,7 @@
         <!-- Start .end-text -->
         <div class="end-text">
           <h2 class="title">Congratulations!</h2>
-          <p class="text">Your selected API are</p>
+          <p class="text">Your selected APIs are</p>
         </div>
         <!-- End .end-text -->
         
