tweaked text and small details for api spinner

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -14,7 +14,7 @@
 		  <form action='/admin/api_spin' method="post">
 		  <p>Member: <input type="text" name="membername"></p> 
 		  <p>APIs: <input type="text" name="apis" style="width:350px"></p> 
-		  <div class="btn"><input type="submit" class="btn" value="Submit"></div>
+		  <div class="btn"><input type="submit" class="btn" value="Submit"></div> <span style="padding-left:15px"> <a href="/mashathon/spin-results" target="_blank">View Results</a></span>
 		  </form>
 		 </div>
 
