--- a/app/views/mashathon/result.html.erb
+++ b/app/views/mashathon/result.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag "bootstrap" %>
 
     <!-- Page title -->
-    <title>API Mashathon Results</title>
+    <title>API Mashathon Spin Results</title>
   </head>
   <!-- End head -->
   
@@ -15,7 +15,7 @@
     <body>
     <div class="container">
       <div class="span6">
-        <h1> API Mashathon Results </h1>
+        <h1>#SuperAwesome Cloud API Mashathon Spin Results</h1>
       
         <table class="table table-striped table-bordered">
           <thead>
