final changes for mashathon

--- a/app/views/mashathon/index.html.erb
+++ b/app/views/mashathon/index.html.erb
@@ -22,7 +22,7 @@
         <!-- Start .intro -->
         <section class="intro">
           <!-- Title -->
-          <h1 class="title">SUPER AWESOME CLOUD API MASHATHON SPINNER!</h1>
+          <h1 class="title">SUPERAWESOME CLOUD API MASHATHON SPINNER!</h1>
           <!-- Start .content -->
           <div class="content">
             <!-- Main text -->
@@ -41,7 +41,7 @@
         
         <!-- Start .intro-text -->
         <div class="intro-text">
-          <h2 class="title">SUPER AWESOME <br/> CLOUD API MASHATHON <br/> SPINNER!</h2>
+          <h2 class="title">SUPERAWESOME <br/> CLOUD API MASHATHON <br/> SPINNER!</h2>
         </div>
         <!-- End .intro-text -->
         
@@ -127,6 +127,7 @@
       <!-- End .spinner -->
       <!-- Modal overlay -->
       <div class="overlay"></div>
+      <p style="padding-top:25px;color:#ffffff">For details on each API, see the <a href="http://community.topcoder.com/tco13/overview/api-hackathon/" style="color:#ffffff">official TCO Hackathon page</a>. You can view the results of each contestant’s spin <a href="/mashathon/spin-results" style="color:#ffffff">here</a>.</p>
     </section>
     <!-- End .spinner-wrap -->
     </body>
