--- a/app/views/mashathon/result.html.erb
+++ b/app/views/mashathon/result.html.erb
@@ -16,6 +16,8 @@
     <div class="container">
       <div class="span6">
         <h1>#SuperAwesome Cloud API Mashathon Spin Results</h1>
+
+        <p>For details on each API, see the <a href="http://community.topcoder.com/tco13/overview/api-hackathon/">official TCO Hackathon page</a>.</p>
       
         <table class="table table-striped table-bordered">
           <thead>
