fixed type in url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -211,7 +211,7 @@
                       <li><a href="http://smartsheet.cloudspokes.com" target="_blank">Smartsheet</a></li>
                       <li><a href="http://docusign.cloudspokes.com" target="_blank">DocuSign</a></li>
                       <li><a href="http://financialforce.cloudspokes.com" target="_blank">FinancialForce</a></li>
-                      <li><a href="http://brivolabs.cloudspokes.comgit " target="_blank">Brivo Labs</a></li>
+                      <li><a href="http://brivolabs.cloudspokes.com" target="_blank">Brivo Labs</a></li>
                   </ul>
               </div>
 
