disabled delete scorecard checkbox

--- a/app/views/judging/scorecard.html.erb
+++ b/app/views/judging/scorecard.html.erb
@@ -82,7 +82,7 @@
             <div class="control-group">
                 <div class="controls">
                     <label class="checkbox">
-                        <input type="checkbox" id="deleteSubmissionCheckbox" name="delete_participant_submission" value="true" onclick="hide_submitbutton();">Check this box and 'Submit Scorecard' to delete if not a valid scorecard.
+                        <input type="checkbox" id="deleteSubmissionCheckbox" name="delete_participant_submission" value="true" disabled="true">Check this box and 'Submit Scorecard' to delete if not a valid scorecard.
                     </label>
                 </div>
             </div>
